Remove preview version.